Gruppe 4 final feat. oprydning

--- a/src/main/resources/templates/errorcreate.html
+++ b/src/main/resources/templates/errorcreate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>KEA Dating - Velkommen!</title>
+    <title>KEA Dating</title>
 </head>
 
 <body>
@@ -12,10 +12,7 @@
 <div th:insert="fragments/jumbotron :: jumbotron"></div>
 
 <div class="container" id="main">
-
-    <!-- Indsæt indhold her -->
     <div class="row">
-
         <div class="col-md-4">
 
             <div id="form-container">
@@ -29,7 +26,6 @@
                         <input type="text" id="pKodeord" name="pKodeord" placeholder="Kodeord..."><br>
                         <input type="text" id="pEmail" name="pEmail" placeholder="Mailadresse..."><br>
                         <input type="text" id="pDescription" name="pDescription" placeholder="Om dig selv..."><br>
-                        <!-- <input type="submit" id="submit-form" value="Opret profil"> -->
                     </div>
                     <button class="btn btn-primary" type="submit">Opret profil</button>
                 </form>
