--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>KEA Dating - Profil</title>
+    <title>Profil</title>
 </head>
 
 <body>
@@ -38,6 +38,7 @@
             </form>
         </div>
     </div>
+
 </div>
 
 <div th:insert="fragments/footer :: footer"></div>
